@@ -200,9 +200,6 @@
 				RelativePath="..\..\modules\vapor\vpr\IO\Stats\BandwidthIOStatsStrategy.cpp">
 			</File>
 			<File
-				RelativePath="..\..\modules\vapor\vpr\Sync\Barrier.cpp">
-			</File>
-			<File
 				RelativePath="..\..\modules\vapor\vpr\IO\Stats\BaseIOStatsStrategy.cpp">
 			</File>
 			<File
@@ -433,9 +430,6 @@
 			</File>
 			<File
 				RelativePath="..\..\modules\vapor\vpr\IO\Stats\BandwidthIOStatsStrategy.h">
-			</File>
-			<File
-				RelativePath="..\..\modules\vapor\vpr\Sync\Barrier.h">
 			</File>
 			<File
 				RelativePath="..\..\modules\vapor\vpr\IO\Stats\BaseIOStatsStrategy.h">
